--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- 2 столбец -->
         <div class="grid-header-item grid-header-item-2">
             <img src="img/camera1.png" alt="camera-1" class="product-image">
-            <h3>A Fine Camera</h3>
+            <h3>A simple camera</h3>
         </div>
         <div class="grid-items grid-items-1">1500mAh</div>
         <div class="grid-items grid-items-2">7MP</div>
@@ -31,7 +31,7 @@
         <div class="grid-items grid-items-5">395 g/14 oz</div>
         <div class="grid-items grid-items-6"></div>
         <div class="grid-items price grid-items-7">
-            <h2>$349</h2>
+            <h2>$500</h2>
         </div>
         <!-- 3 столбец -->
 
@@ -46,12 +46,12 @@
         <div class="grid-items blue grid-items-11">445 g/15.7 oz</div>
         <div class="grid-items blue grid-items-12"></div>
         <div class="grid-items price blue grid-items-13">
-            <h2>$12,999</h2>
+            <h2>$8,999</h2>
         </div>
         <!-- 4 столбец -->
         <div class="grid-header-item grid-header-item-4">
             <img src="img/terka.png" alt="terka" class="product-image">
-            <h3>Cheese Grater</h3>
+            <h3>Cheese grater</h3>
         </div>
         <div class="grid-items grid-items-15">None</div>
         <div class="grid-items grid-items-16">What</div>
@@ -60,7 +60,7 @@
         <div class="grid-items grid-items-19">600 g/21.16 oz</div>
         <div class="grid-items grid-items-20"></div>
         <div class="grid-items grid-items price grid-items-21">
-            <h2>$17</h2>
+            <h2>$10</h2>
         </div>
     </div>
 </body>
