Changes color and picture

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="grid-label grid-label-7">Price</div>
         <!-- 2 столбец -->
         <div class="grid-header-item grid-header-item-2">
-            <img src="img/camera1.png" alt="camera-1" class="product-image">
+            <img src="https://tehnoteca.ru/img/1737/1736706/fuji_finepix_x100v_1.jpg" alt="camera-1" class="product-image">
             <h3>A simple camera</h3>
         </div>
         <div class="grid-items grid-items-1">1500mAh</div>
